Add SPA Forwarding Controller with build configs